# my_tracker

./: README.md
backend/: alembic.ini  database.db  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: c55ff3799765_add_start_and_end_dates.py
backend/uploads/1/: client_segments.xlsx
backend/uploads/2/: описание_полей_и_метрик.xlsx
