[project]
name = "my-tracker"
version = "0.1.0"
description = "my_tracker"
authors = [
    {name = "deflillusion",email = "defl.illusion@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.13.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
